@@ -6,7 +6,8 @@
   have been fixed. gpxlogger can now daemonize and write to a specified
   log file. A gpsd client can now set any locale it likes, and JSON
   will still be parsed using the C locale matching the daemon's.  Clients
-  are no longer required to define a gpsd_report() hook.
+  are no longer required to define a gpsd_report() hook. gpsd no longer
+  emits probe strings to unknown USB devices at startup.
 
 * Tue Jul 13 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95
   The autonomous robot submarine total world domination release!
